<resources>
    <string name="app_name">رسائل وحالات</string>
    <string name="mainTitle">الرئيسيّة</string>
    <string name="forumTitle">المنتدى</string>
    <string name="sendTitle">نشر حالة</string>
    <string name="chatTitle">الدردشة</string>
    <string name="createTitle">مصمم الصّور</string>
    <string name="settingsTitle">الإعدادات</string>
    <string name="signOut">تسجيل الخروج</string>
    <string name="username">اسم المستخدم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة السر</string>
    <string name="mustLogin">يجب تسجيل الدخول لاستخدام هذه الميّزة</string>
    <string name="loginTitle">تسجيل الدخول</string>
    <string name="registerTitle">إنشاء حساب</string>
    <string name="alreadyHere">لديك حساب؟ سجّل الدّخول</string>
    <string name="newHere">ليس لديك حساب؟</string>
    <string name="loginOrRegister">إنشاء حساب/تسجيل الدخول</string>
    <string name="invalidEmailPassword">يجب ملء جميع الحقول</string>
    <string name="invalidEmail">بريد إلكتروني غير صالح</string>
    <string name="invalidPassword">كلمة السر قصيرة جدًا</string>
    <string name="invalidUsername">اسم المستخدم قصير جدًا</string>
    <string name="invalidUsernameLong">اسم المستخدم طويل جدًا</string>
    <string name="statusMessage">حالة نصية</string>
    <string name="statusImage">إرسال صورة</string>
    <string name="selectStatusType">اختر نوع الحالة</string>
    <string name="statusValue">نص الحالة</string>
    <string name="sendStatus">ارسال الحالة</string>
    <string name="warningTextEmpty">اكتب حالة أولًا!</string>
    <string name="statusSent">تم الإرسال</string>
    <string name="warningSentStatus">حدث خطأ اثناء ارسال الحالة</string>
    <string name="showStatus">معاينة الحالة</string>
    <string name="decorate">تزيين الحالة</string>
    <string name="restoreText">استعادة النّص</string>
    <string name="statusCategory">تصنيف الحالة</string>
    <string name="emptyPosts">المنتدى فارغ حاليًا.\n كن أول من ينشر!</string>
    <string name="no_images">كصحراء واسعة، هذا المكان فارغ!</string>
    <string name="statusImageUploaded">تم النشر بناجح</string>
    <string name="statusImageUploadedFailed">حدث خطأ أثناء نشر الصورة</string>
    <string name="pick_a_color">اختر لونًا</string>
    <string name="send">إرسال</string>
    <string name="preview">معاينة المنشور</string>
    <string name="post">نشر</string>
    <string name="deleteText">حذف النص</string>
    <string name="sendChatTitle">نص الرسالة</string>
    <string name="camera">تصوير صورة</string>
    <string name="copied">تم النسخ</string>
    <string name="comment_copied">تم نسخ التعليق</string>
    <string name="createPost">منشور جديد!</string>
    <string name="appNotFound">تعذّر العثور على التطبيق</string>
    <string name="textDeleted">تم حذف المحتوى</string>
    <string name="undo">تراجع</string>
    <string name="saveImage">حفظ الصّورة</string>
    <string name="okay">حسنًا</string>
    <string name="comments">التعليقات</string>
    <string name="view_post">عرض المنشور</string>
    <string name="profile">الملف الشخصي</string>
    <string name="changeBackground">تغير الخلفية</string>
    <string name="selectImage">اختيار صورة</string>
    <string name="sendImage">إرسال صورة</string>
    <string name="chooseImage">اختر صورة</string>
    <string name="viewAllImages">عرض كل الصّور</string>
    <string name="confirm">تأكيد</string>
    <string name="cancel">إلغاء</string>
    <string name="editorNavBrush">BRUSH</string>
    <string name="editorNavText">TEXT</string>
    <string name="editorNavEraser">ERASER</string>
    <string name="editorNavEmoji">EMOJI</string>
    <string name="editorNavColors">COLORS</string>
    <string name="saved_posts">المنشورات المحفوظة</string>
    <string name="select_fonts">اختر أحد الخطوط التالية</string>
    <string name="select_emoji">اختر ملصقًا لإضافته إلى الصورة</string>
    <string name="text_sample">عندما انطفأت شعلة النار، بدأ يحدِّق في النجوم عبر النافذة. كانت رحلة العودة ستتم من غير رفاق طريق.</string>
    <string name="couldnt_save_image">تعذر حفظ الصورة</string>
    <string name="image_saved">تم حفظ الصورة بنجاح</string>
    <string name="type_here">اكتب هنا</string>
    <string name="postSent">تم إرسال منشورك بنجاح!</string>
    <string name="fillFields">املأ جميع الحقول</string>
    <string name="date_sample">2020/20/12 16:00</string>
    <string name="are_you_sure">هل أنت متأكد من رغبتك في الاستمرار؟</string>
    <string name="delete_post">حذف المنشور</string>
    <string name="post_deleted">تم حذف المنشور</string>
    <string name="report_post">الإبلاغ عن المنشور</string>
    <string name="report_post_confirm">هل أنت متأكد أن المنشور غير لائق؟</string>
    <string name="report_sent">تم استلام الإبلاغ</string>
    <string name="added_favorites">تمّت الإضافة إلى المفضّلة</string>
    <string name="favorites">المفضّلة</string>
    <string name="usersTexts">حالات ورسائل المستخدمين</string>
    <string name="delete_post_favorites">حذف العنصر من المفضّلة</string>
    <string name="no_saved_posts">لم تقم بحفظ أي منشور</string>
    <string name="no_favorites">المفضّلة فارغة</string>
    <string name="save_image_item">حفظ الصورة</string>
    <string name="save_image_text">هل ترغب بحفظ الصورة مع النص؟</string>
    <string name="sortBy">ترتيب حسب</string>
    <string name="sortByLikes">الأكثر إعجابًا</string>
    <string name="sortByTime">الأحدث زمنيًا</string>
    <string name="register_tip_1"> تعرّف على المنتديات المليئة بالمنشورات النقاشيّة، علّق وتفاعل مع الجميع.</string>
    <string name="register_tip_2">قم بالدخول إلى الدردشة العالميّة، ملتقى مستخدمي التطبيق الأكبر. إرسال الرسائل لم يعد صعبًا!</string>
    <string name="decorate_tip_1">يمكنك تعديل نص الحالة، وتعديل الصورة أو اختيار أي صورة، ويمكنك تغيير الخط ولون خلفية النص</string>
    <string name="send_image_tip_1">لا ترفع صورة شخصيّة، ولا ترفع صورة ليس فيها تعبيرًا بمعنى</string>
    <string name="send_image_tip_2">لا تكرر رفع الصّورة نفسها أكثر من مرّة، واحرص أن تكون الصورة فريدة</string>
    <string name="send_image_tip_3">قم بالإبلاغ عن أي صورة غير لائقة، وسيتم حذفها إذا كانت حقًا غير لائقة</string>
    <string name="signing_in">يجري تسجيل الدّخول</string>
    <string name="no_user">تعذّر العثور على المستخدم</string>
    <string name="problem_occurred">تعذّر الإتصال. يرجى المحاولة مرّة أخرى</string>
    <string name="search">ابحث</string>
    <string name="no_result">تعذّر العثور على أي نتيجة</string>
    <string name="status_color">خلفية نص الحالة</string>
    <string name="mainColor">اللون الرئيسي</string>
    <string name="text_color">لون النّص</string>
    <string name="fontChange">تغيير الخط</string>
    <string name="changeName">تغيير الاسم</string>
    <string name="showImages">استخدام الصّور كخلفيّة</string>
    <string name="notifications">الإشعارات</string>
    <string name="changeImage">تغيير الصّورة</string>
    <string name="newName">الاسم الجديد</string>
    <string name="user_not_found">مستخدم محذوف</string>
    <string name="delete_comment_confirm">سيتم حذف تعليقك فورًا، هل أنت متأكد؟</string>
    <string name="delete_comment">حذف التعليق</string>
    <string name="report_comment_confirm">هل أنت متأكد أن التعليق غير ملائم؟</string>
    <string name="report_comment">الإبلاغ عن التعليق</string>
    <string name="no_comments">يبدو أن المكان هادئٌ جدًا هنا…</string>
    <string name="cache_deleted">سيتم حذف البيانات المؤقتة</string>
    <string name="cache_delete"> حذف البيانات المؤقتة</string>
    <string name="send_text_tip1">احرص على أن تكون حالتك مميزة وغير مكرّرة، وذلك لتنال إعجاب المستخدمين</string>
    <string name="send_text_tip2">لا تستخدم ألفاظًا غير لائقة، وحاول أن تقلل من التعابير الوجهيّة</string>
    <string name="post_forum_tip1">ابدأ نقاشًا، أو انشر قصّة جميلة حصلت معك، تفاعل مع المستخدمين بكل سهولة</string>
    <string name="post_forum_tip2">قم بالإبلاغ عن أي إساءة تراها سواء لشخص أو لفئة ما، وسيتم التعامل معها بأسرع وقت</string>
    <string name="channelDescription">الإشعارات المتعلّقة بالإعجابات والتعليقات على المنشورات</string>
    <string name="newLikesTitle">إعجابات جديدة!</string>
    <string name="newLikesMessage">حصل منشورك على %1$d إعجابات.</string>
    <string name="newCommentTitle">تعليق جديد!</string>
    <string name="newCommentMessage">أرسل %1$s تعليقًا جديدًا لمنشورك.</string>
    <string name="currentName">الاسم الحالي: %1$s</string>
    <string name="nameChanged">أهلًا بك مجددًا يا %1$s</string>
    <string name="faq">أسئلة متكررة</string>
    <string-array name="faqAnswers">
        <item>يمكنك الإبلاغ عن أي منشور، حالة أو صورة من خلال الزر المخصص لذلك</item>
        <item>يمكن لجميع مستخدمي التطبيق رؤية ما تنشره، لذا كن حسن الاختيار</item>
        <item>الإعلانات هي الوسيلة الوحيدة الممكنة لضمان استمرار التطبيق</item>
        <item>فريقنا مكوّن من طلّاب لديهم العديد من المشاغل، لذا قد نطلق تحديثًا كل نصف سنة</item>
        <item>لا يمكنك ذلك حاليًا</item>
        <item>هناك زر مخصص لحذف الصور والمنشورات، يمكنك استخدامه وسيتم الحذف فورًا</item>
        <item>تحتاج إلى الانترنت لنشر أي حالة، تأكد من جودة اتصالك</item>
        <item>يمكنك استخدام معظم ميزات التطبيق بدون انترنت، لكنك تحتاج حسابًا حتى تستطيع النشر</item>
        <item>بسبب الاختلافات الكبيرة بين أجهزة المستخدمين، كان علينا استخدام طريقة تقليدية في حفظ الصورة لضمان دعم كل الأجهزة</item>

    </string-array>
    <string-array name="categoryEn">
        <item>Wisdom</item>
        <item>Friendship</item>
        <item>Sadness</item>
        <item>Islam</item>
        <item>Other</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Love</item>
        <item>Winter</item>
        <item>Proverbs</item>
        <item>Funny</item>
        <item>Eid</item>
        <item>Ramadan</item>
        <item>Prayer</item>
    </string-array>
    <string name="wisdom">أقوال وحكم</string>
    <string name="friendship">عن الصداقة</string>
    <string name="sadness">عن الحزن</string>
    <string name="islam">مواعظ إسلاميّة</string>
    <string name="other">منوّعات</string>
    <string name="morning">رسائلٌ صباحيّة</string>
    <string name="afternoon">رسائلٌ مسائيّة</string>
    <string name="love">عن الحُب</string>
    <string name="winter">عن الشتاء</string>
    <string name="proverbs">أمثال شعبيّة</string>
    <string name="funny">نكت وضحك</string>
    <string name="eid">منشورات للعيد</string>
    <string name="ramadan">عن رمضان</string>
    <string name="prayer">أدعية</string>
    <string-array name="category">
        <item>أقوال وحكم</item>
        <item>عن الصداقة</item>
        <item>عن الحزن</item>
        <item>مواعظ إسلاميّة</item>
        <item>منوّعات</item>
        <item>رسائلٌ صباحيّة</item>
        <item>رسائلٌ مسائيّة</item>
        <item>عن الحُب</item>
        <item>عن الشتاء</item>
        <item>أمثال شعبيّة</item>
        <item>نكت وضحك</item>
        <item>منشورات للعيد</item>
        <item>عن رمضان</item>
        <item>أدعية</item>
    </string-array>
    <string-array name="options">
        <item>حذف البيانات المؤقتة</item>
        <item>الوضع الليلي</item>
        <item>تسجيل الخروج</item>
        <item>سياسة الخصوصيّة</item>
        <item>أسئلة متكررة</item>
        <item>المزيد من التطبيقات</item>
    </string-array>
    <string-array name="statusColors">
        <item>أزرق</item>
        <item>أحمر</item>
        <item>أخضر</item>
        <item>رمادي</item>
    </string-array>
    <string-array name="MoreStatusColors">
        <item>أزرق</item>
        <item>أحمر</item>
        <item>أخضر</item>
        <item>رمادي</item>
        <item>زهري</item>
        <item>ذهبي</item>
        <item>زمردي</item>
        <item>عسلي</item>
        <item>فحمي</item>
        <item>فضي</item>
    </string-array>
    <string name="logout">تسجيل الخروج</string>
    <string name="darkMode">الوضع الليلي</string>
    <string name="moreApps">المزيد من التطبيقات</string>
    <string name="delete_text">حذف النص</string>
    <string name="preview_text">معاينة المنشور</string>
</resources>