<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/createCamera"
        android:icon="@drawable/ic_cam"
        android:title="@string/camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/createSave"
        android:icon="@drawable/ic_down_arrow"
        android:title="@string/saveImage"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/changeBackground"
        android:icon="@drawable/ic_sticker"
        app:showAsAction="ifRoom"
        android:title="@string/changeBackground" />

    <item
        android:id="@+id/createLibrary"
        android:icon="@drawable/ic_photo_library"
        android:title="@string/camera"
        app:showAsAction="ifRoom" />

</menu>