<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?backgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/paddingMarginNormal"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="?textColor"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogMessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/paddingMarginNormal"
        android:text="@string/text_sample"
        android:textColor="?textColor"
        android:textSize="@dimen/textSizeNormal" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/paddingMarginNormal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialogConfirmButton"
            style="@style/default_button_style"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialogCancelButton"
            style="@style/default_button_style"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>