<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.lemonlab.all_in_one.MainFragment"
        android:label="@string/mainTitle"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/mainToSettings"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/sendFragment"
        android:name="com.lemonlab.all_in_one.SendFragment"
        android:label="@string/sendTitle"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/forumFragment"
        android:name="com.lemonlab.all_in_one.ForumFragment"
        android:label="@string/forumTitle"
        tools:layout="@layout/fragment_forum" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.lemonlab.all_in_one.SettingsFragment"
        android:label="@string/settingsTitle"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.lemonlab.all_in_one.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/createFragment"
        android:name="com.lemonlab.all_in_one.CreateFragment"
        android:label="fragment_create"
        tools:layout="@layout/fragment_create" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.lemonlab.all_in_one.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.lemonlab.all_in_one.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/mustLoginFragment"
        android:name="com.lemonlab.all_in_one.MustLoginFragment"
        android:label="fragment_must_login"
        tools:layout="@layout/fragment_must_login" />
</navigation>