<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".PostFragment">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/forumPostingProgressBar"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/postFragmentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/forum_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/paddingMarginNormal"
                android:background="@drawable/edit_text_rounded"
                android:drawableEnd="@drawable/ic_create"
                android:gravity="center"
                android:hint="@string/app_name"
                android:maxLength="64"
                android:maxLines="1"
                android:padding="@dimen/paddingMarginNormal"
                android:textColor="?textColor"
                android:textColorHint="?textHintColor"
                android:textDirection="rtl"
                android:textSize="@dimen/textSizeLarge" />

            <View style="@style/view_divider_style" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/forum_post_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_text_rounded"
                android:drawableEnd="@drawable/ic_textsms"
                android:drawablePadding="4dp"
                android:hint="@string/text_sample"
                android:lineSpacingExtra="4pt"
                android:padding="@dimen/paddingMarginNormal"
                android:textColor="?textColor"
                android:textColorHint="?textHintColor"
                android:textDirection="rtl"
                android:textSize="@dimen/textSizeNormal" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/paddingMarginNormal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clear_post_text_btn"
                    style="@style/default_button_style"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_text"
                    android:drawablePadding="2dp"
                    android:text="@string/delete_text"
                    android:textSize="@dimen/textSizeSmall" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/post_to_forum_btn"
                    style="@style/default_button_style"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_send"
                    android:drawablePadding="2dp"
                    android:text="@string/post"
                    android:textSize="@dimen/textSize" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/preview_forum_post_btn"
                    style="@style/default_button_style"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_eye"
                    android:drawablePadding="2dp"
                    android:text="@string/preview_text"
                    android:textSize="@dimen/textSizeSmall" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableEnd="@drawable/ic_info"
                android:drawablePadding="@dimen/paddingMarginNormal"
                android:padding="@dimen/paddingMarginNormal"
                android:text="@string/post_forum_tip1"
                android:textColor="?textColor"
                android:textIsSelectable="false"
                android:textSize="@dimen/textSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_info"
                android:drawablePadding="@dimen/paddingMarginNormal"
                android:padding="@dimen/paddingMarginNormal"
                android:text="@string/post_forum_tip2"
                android:textColor="?textColor"
                android:textIsSelectable="false"
                android:textSize="@dimen/textSize" />

            <View style="@style/view_divider_style" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>